K8S/commands-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commands-deploy
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: commandservice
  template:
    metadata:
      labels:
        app: commandservice
    spec:
      containers:
        - name: commandservice
          image: kirmct/commandservice:latest
--- # adding a clusterip to platform deployment
apiVersion: v1
kind: Service
metadata:
  name: commands-clusterip-srv
spec: 
  type: ClusterIP
  selector: 
    app: commandservice
  ports:
  - name: commandservice
    protocol: TCP
    port: 8080
    targetPort: 8080
