K8S/platforms-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platforms-deploy
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: platformservice
  template:
    metadata:
      labels:
        app: platformservice
    spec:
      containers:
        - name: platformservice
          image: kirmct/platformservice:latest
--- # adding a clusterip to platform deployment
apiVersion: v1
kind: Service
metadata:
  name: platforms-clusterip-srv
spec: 
  type: ClusterIP
  selector: 
    app: platformservice
  ports:
  - name: platformservice
    protocol: TCP
    port: 8080
    targetPort: 8080
