K8S/platforms-np-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: platformnpservice-srv
spec:
  type: NodePort
  selector:
    app: platformservice #same name in deploy file
  ports:
    - name: platformservice
      protocol: TCP
      port: 8080 #port we are showing in our container
      targetPort: 8080
